--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/colorPrimaryDark"
     android:fitsSystemWindows="true">
     <LinearLayout
@@ -10,14 +11,17 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_bar"
+        android:layout_above="@+id/bottom_nav_bar"
         android:background="@android:color/background_light"
         />
-    <com.ashokvarma.bottomnavigation.BottomNavigationBar
-        android:id="@+id/bottom_bar"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentBottom="true"
-        />
+        app:itemBackground="@color/colorAccent"
+        app:itemIconTint="@color/bottom_item_text_color"
+        app:itemTextColor="@color/bottom_item_text_color"
+        app:menu="@menu/menu_bottom_navigation_items"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
